Fixed the extra space issue
In this commit, I have fixed this issue. Fix #395

--- a/css/order-delivery-date.css
+++ b/css/order-delivery-date.css
@@ -94,3 +94,7 @@ table.form-table #orddd_lite_ics_url_list .orddd_lite_ics_feed_url {
 .add-timeslot {
 	margin-top: 12px;
 }
+
+#orddd_delivery_dates_list .tablenav {
+	display: none;
+}
